--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,8 @@ vendor
 
 ### Hugo ###
 # Generated files by hugo
-_base/public/
-_base/resources/_gen/
+/_base/public/
+/_base/resources/_gen/
 hugo_stats.json
 
 # Executable may be added to repository
